fix(button): Reduce z-index to avoid conflicts with Tailwind

--- a/src/assets/scss/_components/_floating-button.scss
+++ b/src/assets/scss/_components/_floating-button.scss
@@ -7,7 +7,7 @@ $floating-button-color: $color-neutral-300;
 	cursor: pointer;
 	min-width: 24px;
 	position: fixed;
-	z-index: 99999997;
+	z-index: 100000; // Below Tailwind z-10 value
 	right: $spacing-lg;
 	bottom: $spacing-lg;
 	display: flex;
